# blind

./: .env.example  .gitignore  CLAUDE.md  README.md  bash.exe.stackdump  ensemble_rag_test.ipynb  main.py  migrate_reviews.py  out.md  pyproject.toml  requirements.txt
docs/: BlindInsight_AI_Architecture.md  BlindInsight_Architecture_Visualization.md  BlindInsight_Architecture_Visualization_Summary.md  RAG_Optimization_Strategy.md  generate_architecture_diagrams.py
docs/diagrams/: 정리완료_보고서.md
docs/diagrams/한글버전/: 한글_UI구조도.md  한글_데이터흐름도.md  한글_에이전트_계층구조.md  한글_워크플로우_다이어그램.md
simple_workflow/: README.md  simple_graph.py  simple_nodes.py  simple_state.py
src/blindinsight/: __init__.py
src/blindinsight/agents/: __init__.py  base.py  career_agent.py  career_growth_agent.py  company_culture_agent.py  compensation_agent.py  culture_agent.py  growth_agent.py  management_agent.py  quality_evaluator_agent.py  salary_benefits_agent.py  work_life_balance_agent.py
src/blindinsight/chat/: __init__.py  modern_supervisor.py  state.py  workflow.py
src/blindinsight/frontend/: __init__.py  app.py  components.py  utils.py
src/blindinsight/mcp/: __init__.py  client.py  handlers.py  providers.py
src/blindinsight/rag/: __init__.py  agent_integration_example.py  document_processor.py  embeddings.py  json_processor.py  knowledge_base.py  retriever.py
src/blindinsight/workflow/: README_LANGGRAPH_GUIDE.md  __init__.py  graph.py  nodes.py  state.py
tools/: README.md  blind_review_crawler copy.py  blind_review_crawler.py  category_processor.py  config.py  enhanced_category_processor.py  keyword_dictionary.py  requirements.txt  run_crawler.py  text_processor.py
